Spin Modifier - Merge Vert Makes mesh disappear #66475

Closed
opened 2019-07-05 17:13:33 +02:00 by Em Eckx · 7 comments

System Information
Operating system: Win 10 pro
Graphics card: RTX 2080

Blender Version
Broken: 2.80 66684bdff3

Short description of error
When using the spin modifier and the merge vertices option the mesh disappears.
This began happening 7-3 and onward.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Divide a plane,
Delete half,
Add spin modifier
Click merge vertices

2019-07-05_10-09-19.gif

**System Information** Operating system: Win 10 pro Graphics card: RTX 2080 **Blender Version** Broken: 2.80 66684bdff30f **Short description of error** When using the spin modifier and the merge vertices option the mesh disappears. This began happening 7-3 and onward. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Divide a plane, Delete half, Add spin modifier Click merge vertices ![2019-07-05_10-09-19.gif](https://archive.blender.org/developer/F7568023/2019-07-05_10-09-19.gif)
Author

Added subscriber: @masterxeon1001

Added subscriber: @masterxeon1001

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-07-05 18:53:42 +02:00

@fclem, I know it's not your area, but I'm pretty sure that this problem came from your commit 2866c74208

Here a possible fix:

diff --git a/source/blender/modifiers/intern/MOD_screw.c b/source/blender/modifiers/intern/MOD_screw.c
index 3c84bb7ae15..5ffa38f71f2 100644
--- a/source/blender/modifiers/intern/MOD_screw.c
+++ b/source/blender/modifiers/intern/MOD_screw.c
@@ -132,6 +132,9 @@ static Mesh *mesh_remove_doubles_on_axis(Mesh *result,
       tot_doubles += 1;
       copy_v3_v3(mvert_new[i].co, axis_co);
     }
+    else {
+      mvert_new[i].flag &= ~ME_VERT_TMP_TAG;
+    }
   }
 
   if (tot_doubles != 0) {

@fclem, I know it's not your area, but I'm pretty sure that this problem came from your commit 2866c74208 Here a possible fix: ``` diff --git a/source/blender/modifiers/intern/MOD_screw.c b/source/blender/modifiers/intern/MOD_screw.c index 3c84bb7ae15..5ffa38f71f2 100644 --- a/source/blender/modifiers/intern/MOD_screw.c +++ b/source/blender/modifiers/intern/MOD_screw.c @@ -132,6 +132,9 @@ static Mesh *mesh_remove_doubles_on_axis(Mesh *result, tot_doubles += 1; copy_v3_v3(mvert_new[i].co, axis_co); } + else { + mvert_new[i].flag &= ~ME_VERT_TMP_TAG; + } } if (tot_doubles != 0) { ```

This issue was referenced by 473259f98b

This issue was referenced by 473259f98bc65909350f951dbed4e2e5ef82fc64

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

This comment was removed by @masterxeon1001

*This comment was removed by @masterxeon1001*
Author

This comment was removed by @masterxeon1001

*This comment was removed by @masterxeon1001*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66475
No description provided.