Fix T66475 Spin Modifier: Merge Vert Makes mesh disappear